Cascading Change Log

unreleased (wip 1.1)

  Changed map and reduce operation stack so that collected c.t.Tuple instances do not remain 'unmodifiable' after
  being collected via the c.t.TupleEntryCollector.

  Add #getArgumentFields() to c.o.OperationCall for all operations.

  Added support for custom EMR properties used for managing task attempt temporary path management for some filesystems.

  Changed c.t.TemplateTap to support an openTapsThreshold value. The default open taps is 300. After the threshold
  is met, 10% of the least recently used open taps will be closed.

  Changed c.t.Fields #setComparator fieldName argument to accept Fields instances as the fieldName argument.
  Only the first field name or position is considered.

  Changed c.t.TupleEntry 'get as type' accessors to now also accept c.t.Fields instances as the fieldName argument. Only
  the first field name or position is considered.

  Update janino to 2.5.16.

  Updated jgrapht to 0.8.1.

  Changed c.f.s.FlowMapperStack to source key/value pairs once, instead of per branch.

  Changed c.f.FlowPlanner to fail if not all sources or sinks are bound to heads or tails, respectively.

  Changed c.t.TupleOutputStream to lookup tuple element writers by Class identity.

  Added j.b.ConstructorProperties annotation to relevant class constructors.

  Added new convenience method c.p.Pipe#names to return an array of all the pipe names in an assembly. This supports
  the dynamic creation of traps from opaque assemblies.

  Added new c.s.Scheme type c.s.TextDelimited to allow native support for delimited text files.

  Added optimization during CoGrouping where the most LHS pipe will not ever be accumulated, instead the values iterator
  will be used directly. This allows for the most dense values to be on the LHS, and the most sparse to be on the
  RHS of the join.

  Added new counters for tuple spills and reads. Also logs grouping after first spill.
